--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <h2>Traveler Reviews</h2>
 
         <div class="review">
-            <div class="name">Lebron James</div>
+            <div class="name">LeBron James</div>
             <div class="title">"The best trip of my life!"</div>
             <div class="rating">★★★★★</div>
             <div class="content">Boracay was absolutely stunning with white sand and clear blue waters!
@@ -89,8 +89,7 @@
             <div class="title">"Highly recommended!"</div>
             <div class="rating">★★★★★</div>
             <div class="content">Siargao was absolutely unforgettable. The beaches, waves, and people made the trip incredible. 
-            The island’s nightlife was lively and full of good vibes. I’m definitely coming back again soon.
-            I even tipped the team $10,000 for their amazing service!</div>
+            The island’s nightlife was lively and full of good vibes. I even tipped the team $10,000 for their amazing service!💸💸💸</div>
         </div>
     </section>
 
