--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 </header>
 
 <main>
-    <!-- Projects (Tours) -->
+    <!-- Projects -->
     <section id="projects">
         <h2>Popular Tour Packages</h2>
 
